Hide main toolbar when scrolled on mobile https://npm.myjetbrains.com/youtrack/issue/BEERBOX-29

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,9 +20,12 @@ h2 {
   right: 0;
 }
 
-.main-is-mobile .main-toolbar {
-  position: fixed;
-  z-index: 2;
+.main-toolbar {
+  transition: height 0.4s ease;
+}
+
+.main-toolbar--hidden {
+  height: 0;
 }
 
 .main-spacer {
